--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -9,12 +9,13 @@
     </head>
     <body>
         <header>
-            <h1>A holy grail layout example</h1>
+            <h1>A Holy Grail Layout Example</h1>
         </header>
         <nav>
             <ul>
                 <li><a href="http://www.amazon.com">Amazon.com</a></li>
                 <li><a href="http://www.disney.com">Disney.com</a></li>
+            </ul>
         </nav>
         <main>
             <section>
