--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jeffrey Williams | WDD 130</title>
+        <meta name="description" content="Rafting website">
+        <meta name="author" content="Jeffrey Williams">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -17,8 +19,17 @@
         <main>
             <h1>Jeffrey Williams | WDD 130</h1>
             <img src="images/profile.jpg" alt="Jeff Williams Profile" width="200">
-            <p>Hello.</p>
+            <p>Hello. Welcome to my test page.</p>
         </main>
+        <aside>
+            <h2>Colorado</h2>
+            <img src="images/colorado-rafting.jpg" alt="Colorado Rafting">
+            <p>And the Colorado Rocky Mountain high. 
+                I've seen it rainin' fire in the sky
+                I know he'd be a poorer man if he never saw an eagle fly
+                Rocky Mountain high.
+            </p>
+        </aside>
         <footer>
             <p>©2023 | Jeffrey Williams | Colorado, USA</p>
         </footer>
