--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Jeffrey Williams | WDD 130</title>
+        <title>About Us - Colorado Rafting</title>
         <meta name="description" content="Rafting website">
         <meta name="author" content="Jeffrey Williams">
         <link rel="stylesheet" href="styles/rafting.css">
