--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Us - Colorado Rafting</title>
-        <meta name="description" content="Rafting website">
+        <meta name="description" content="About Us page for Colorado Rafting.">
         <meta name="author" content="Jeffrey Williams">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
