Added flex and grid.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,25 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="https://www.linkedin.com">LinkedIn</a>
+                <a href="https://www.facebook.com">Facebook</a>
             </nav>
         </header>
+        <div class="grid">
         <main>
             <h1>Jeffrey Williams | WDD 130</h1>
             <img src="images/profile.jpg" alt="Jeff Williams Profile" width="200">
-            <p>Hello. Welcome to my test page.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Odio doloribus reiciendis nam unde quaerat. Veritatis, dolorum? 
+                Autem a tempore corporis odit tempora praesentium rem doloribus id 
+                numquam optio. Quo animi hic minus nesciunt dolor perspiciatis 
+                adipisci distinctio deleniti, quas aspernatur molestiae vel 
+                reprehenderit voluptatum temporibus incidunt eveniet ut 
+                repudiandae quaerat odit, fuga blanditiis ad voluptatem enim 
+                facere! Ex, necessitatibus ab adipisci debitis voluptate nulla 
+                odit repellendus corporis asperiores nobis labore quod obcaecati
+                molestiae dolores quam culpa quo molestias earum dignissimos, 
+                dolore laborum neque impedit reiciendis.</p>
         </main>
         <aside>
             <h2>Colorado</h2>
@@ -30,6 +43,7 @@
                 Rocky Mountain high.
             </p>
         </aside>
+        </div>
         <footer>
             <p>©2023 | Jeffrey Williams | Colorado, USA</p>
         </footer>
