--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
                 odit repellendus corporis asperiores nobis labore quod obcaecati
                 molestiae dolores quam culpa quo molestias earum dignissimos, 
                 dolore laborum neque impedit reiciendis.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/washington-d.c.-temple?lang=eng" target="_blank">Washington D.C. Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank" >City Center Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Colorado</h2>
             <img src="images/colorado-rafting.jpg" alt="Colorado Rafting">
             <p>And the Colorado Rocky Mountain high. 
@@ -48,4 +53,5 @@
             <p>©2023 | Jeffrey Williams | Colorado, USA</p>
         </footer>
     </body>
+    <!--December 9, 2023-->
 </html>
