--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,6 +11,7 @@
     <body>
         <header>
             <img src="images/wwr-logo.jpg" alt="Colorado Rafting">
+            <h1>Colorado Rafting</h1>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
@@ -21,31 +22,42 @@
         <main>
            <div class="hero">
               <img id="hero-img" src="images/hero-sm.jpg" alt="Whitewater Rafting">
-              <h1>Colorado Whitewater Rafting</h1>
+              <h1 id="absolute">Colorado Whitewater Rafting</h1>
               <article>
                 <img id="article-img" src="images/happy.jpg" alt="Happy Rafting Customers">
                 <p>Colorado Whitewater Rafting's mission is to provide an exhilerating, 
                     safe, outdoor experience for people of all ages and experience levels.
                     Our motto is, "The river does most of the work so you can enjoy the ride!"
                 </p>
-                            </article>
+              </article>
             </div>
             <section>
                 <h2>History</h2>
+                <div id="history">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate 
                     excepturi iusto assumenda dolor earum reiciendis, omnis placeat fuga 
                     nobis dicta autem architecto incidunt non voluptas? Dignissimos 
                     reiciendis doloremque facilis excepturi totam dolore suscipit 
                     corrupti expedita natus error. 
                 </p>
+                <img src="images/wwr-logo.jpg" alt="Colorado Rafting">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate 
+                    excepturi iusto assumenda dolor earum reiciendis, omnis placeat fuga 
+                    nobis dicta autem architecto incidunt non voluptas? Dignissimos 
+                    reiciendis doloremque facilis excepturi totam dolore suscipit 
+                    corrupti expedita natus error. 
+                </p>
+              </div>
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/rafting1.jpg" alt="Whitewater rafting">
-                <img src="images/rafting2.jpg" alt="Whitewater rafting">
-                <img src="images/rafting3.jpg" alt="Whitewater rafting">
-                <img src="images/rafting4.jpg" alt="Whitewater rafting">
-                <img src="images/rafting5.jpg" alt="Whitewater rafting">
+                <div id="adventure">
+                    <img src="images/rafting1.jpg" alt="Whitewater rafting">
+                    <img src="images/rafting2.jpg" alt="Whitewater rafting">
+                    <img src="images/rafting3.jpg" alt="Whitewater rafting">
+                    <img src="images/rafting4.jpg" alt="Whitewater rafting">
+                    <img src="images/rafting5.jpg" alt="Whitewater rafting">
+                </div>
             </section>
         </main>
         <footer>
