--- a/wwr/about.html
+++ b/wwr/about.html
@@ -52,11 +52,26 @@
             <section>
                 <h2>Adventure Awaits You!</h2>
                 <div id="adventure">
+                    <figure>
                     <img src="images/rafting1.jpg" alt="Whitewater rafting">
+                    <figcaption>White Water</figcaption>
+                    </figure>
+                    <figure>
                     <img src="images/rafting2.jpg" alt="Whitewater rafting">
+                    <figcaption>Fun</figcaption>
+                    </figure>
+                    <figure>
                     <img src="images/rafting3.jpg" alt="Whitewater rafting">
+                    <figcaption>Adventure</figcaption>
+                    </figure>
+                    <figure>
                     <img src="images/rafting4.jpg" alt="Whitewater rafting">
+                    <figcaption>Relaxation</figcaption>
+                    </figure>
+                    <figure>
                     <img src="images/rafting5.jpg" alt="Whitewater rafting">
+                    <figcaption>All ages</figcaption>
+                    </figure>
                 </div>
             </section>
         </main>
