--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 odit repellendus corporis asperiores nobis labore quod obcaecati
                 molestiae dolores quam culpa quo molestias earum dignissimos, 
                 dolore laborum neque impedit reiciendis.</p>
-            <ul class="box">
+            <ul class="box indent">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/washington-d.c.-temple?lang=eng" target="_blank">Washington D.C. Temple</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank" >City Center Temple</a></li>
