--- a/week03/overlay.html
+++ b/week03/overlay.html
@@ -12,15 +12,16 @@
         <main>
             <h2>CSS Layout: Position Absolute</h2>
             <div class="herodiv">
-                <img src="http://placekitten.com/850/300" alt="Kitten placeholder image" width="850" height="300">
+                <img src="http://loremflickr.com/700/300/brazil" alt="Kitten placeholder image" width="850" height="300">
                 <section class="stats">
-                    <h3>About Me</h3>
-                    <p>Gender: <span id="gender">Female</span></p>
-                    <p>Age: <span id="age">1</span></p>
-                    <p>Shots?: <span id="shots">Yes</span></p>
+                    <h3>Brazil</h3>
+                    <p>Language: <span id="lan">Portuguese</span></p>
+                    <p>Size: <span id="size">8.5m km<sup>2</up></span></p>
+                    <p>Visted?: <span id="visit">No</span></p>
                 </section>
             </div>
         </main>
         <footer>Footer Content in Fixed Position with bottom set at 0 pixels.</footer>
     </body>
 </html>
+
