Home page completed.

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -49,7 +49,7 @@
                 </p>
               </div>
             </section>
-            <section>
+            <section id="adventure-awaits">
                 <h2>Adventure Awaits You!</h2>
                 <div id="adventure">
                     <figure>
